<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:weightSum="6"
    android:background="@drawable/main_wallpaper">


    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="240dp"
        android:text="@string/header"
        android:textSize="40dp"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:fontFamily="serif-monospace" />




    <!--    <ImageView-->
    <!--        android:id="@+id/image_crisp"-->
    <!--        android:layout_width="357dp"-->
    <!--        android:layout_height="415dp"-->
    <!--        android:layout_weight="3"-->
    <!--        android:layout_gravity="center"-->
    <!--        android:layout_marginTop="112dp"-->
    <!--        android:layout_marginBottom="10dp"-->
    <!--        android:src="@drawable/crisp_image" />-->


    <Button
        android:id="@+id/signUp"
        android:layout_width="150dp"
        android:layout_height="18dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="0dp"
        android:layout_weight="1"
        android:text="@string/sign_up_without"
        android:textSize="14dp"
        android:textStyle="normal"
        android:textColor="@color/grey"
        android:outlineSpotShadowColor="@color/colorAccent"
        android:backgroundTint="@color/common_google_signin_btn_text_dark_default"
        android:textAllCaps="false"/>
    <Button

        android:id="@+id/sign_In"
        android:layout_width="150dp"
        android:layout_height="18dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_marginTop="30dp"
        android:text="@string/sign_in"
        android:textColor="@color/grey"
        android:textSize="14dp"
        android:textStyle="normal"
        android:outlineSpotShadowColor="@color/colorAccent"
        android:backgroundTint="@color/common_google_signin_btn_text_dark_default"
        android:textAllCaps="false" />



    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="150dp"
        android:layout_height="18dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="0dp"
        android:layout_weight="1"

        android:backgroundTint="@color/common_google_signin_btn_text_dark_default"/>

    <!--    <Button-->
    <!--        android:id="@+id/skip_button"-->
    <!--        android:layout_width="199dp"-->
    <!--        android:layout_height="25dp"-->

    <!--        android:layout_marginTop="10dp"-->
    <!--        android:layout_weight="1"-->

    <!--        android:text="Skip" />-->


</LinearLayout>
