<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:clipToPadding="false"
        android:paddingBottom="1dp"
        android:paddingLeft="1dp"
        android:paddingRight="1dp"
        android:paddingTop="1dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/news_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/lvList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_news"
                    android:layout_width="match_parent"
                    android:layout_height="191dp"
                    android:src="@drawable/sample_main_placeholder" />

                <TextView
                    android:id="@+id/headline"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/newsStory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_upvote"
                        android:layout_width="202dp"
                        android:layout_height="match_parent"
                        android:text="@string/upvote"
                        android:onClick="upvote"/>

                    <Button
                        android:id="@+id/btn_share"
                        android:layout_width="203dp"
                        android:layout_height="wrap_content"
                        android:text="@string/share" />

                </LinearLayout>
                <TextView
                    android:id="@+id/hyperlink2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="0 upvote" />

                <TextView
                    android:id="@+id/hyperlink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/hyperlink" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

</LinearLayout>


